# bot_try

./: pyproject.toml
chatgptlinebot/: urls.py
chatgptlinebot/modules/: chat.py  horoscope.py  youtube_recommend.py
