[tool.poetry]
name = "chatgptlinebot"
version = "0.1.0"
description = ""
authors = ["hs_junxiang <jimmy871117@gmail.com>"]
readme = "README.md"
# packages = [{include = "chatgpt_line_bot"}] # replit

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.23.2"
fastapi = "^0.104.0"
g4f = "*"
line-bot-sdk = "3.13.0"
requests = "^2.31.0"
bs4 = "^0.0.1"
icrawler = "^0.6.7"
python-dotenv = "^1.0.0"
nest_asyncio = "*"
pillow = "*"
jinja2 = "*"
lxml = "^5.2.2"
serpapi = "^0.1.5"
google-search-results = "^2.4.2"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chatgpt-line-bot = "main:app"  #